--- a/window1.ui
+++ b/window1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>301</width>
-    <height>233</height>
+    <height>278</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,15 +33,7 @@ background-color:silver;
 QPushButton:pressed{
 background-color:rgb(96, 255, 39);
 }
-QLabel{
-background-color:rgb(96, 255, 39);
-width:100px;
-length:200px;
-font-size: 14px;
-font-weight:bold;
-border:none;
-text-align:center;
-}
+
 
 </string>
   </property>
@@ -61,8 +53,14 @@ text-align:center;
        <enum>Qt::LeftToRight</enum>
       </property>
       <property name="styleSheet">
-       <string notr="true">QLabel {
-text-align: center
+       <string notr="true">QLabel{
+background-color:rgb(96, 255, 39);
+width:100px;
+length:200px;
+font-size: 14px;
+font-weight:bold;
+border:none;
+text-align:center;
 }
 </string>
       </property>
@@ -82,6 +80,31 @@ text-align: center
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>250</y>
+     <width>221</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+
+width:100px;
+length:200px;
+font-size: 12px;
+font-weight:bold;
+border:none;
+text-align:center;
+color: rgb(171, 171, 171)
+}</string>
+   </property>
+   <property name="text">
+    <string>Автор-разработчик: Любимов В.С.</string>
+   </property>
   </widget>
  </widget>
  <resources/>
